--- a/main.html
+++ b/main.html
@@ -131,7 +131,10 @@
             &times; No data found, internet slow;
         </ol>
         <div class="addApiFloat">
-            <div class="btn btn-primary" onclick="invalid();">+ Add Your APIs</div>
+            <div class="btn btn-primary" onclick="invalid();" title="Add Your APIs here"><i class="fa fa-plus"></i></div>
+        </div>
+        <div class="shareApiFloat">
+            <div class="btn btn-primary" title="Share this page to your friends" onclick="shareActivate('ApiPage');"><i class="fa fa-share"></i></div>
         </div>
     </section>
     <section id="DocsPage">
@@ -632,8 +635,12 @@ try@{
                     <p>How to add libary plugin in my project?</p> 
                   </div> 
                   <div class="accordion__answer"> 
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatum repellat aliquid 
-                    sequi libero hic enim modi, nostrum consequatur possimus maxime.
+                    <p>To facilitate the incorporation of our library files into your project, we have streamlined the process, ensuring 
+                    simplicity and ease of implementation. Adding the library file link or encoding it within your project structure is 
+                    as straightforward as inserting a JavaScript link, aligning with industry-standard practices for integrating API 
+                    plugins. Careful adherence to the prescribed steps, detailed below, is imperative to ensure the seamless functioning 
+                    of our APIs within your project environment. For more information, visit our 
+                    <a href="./main.html?page=DocsPage&search=Why Library File Inclusion is Required">Docs</a> page about it.
                     </p> 
                   </div> 
                 </div>
@@ -642,8 +649,12 @@ try@{
                     <p>How to add an Api in my web?</p> 
                   </div> 
                   <div class="accordion__answer"> 
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatum repellat aliquid 
-                    sequi libero hic enim modi, nostrum consequatur possimus maxime.
+                    <p>Utilizing our API is a straightforward process designed to empower developers with seamless access to a diverse 
+                    range of functionalities. By following a few simple steps, developers can quickly integrate our APIs into their 
+                    projects and leverage the wealth of data and capabilities they offer. Our intuitive documentation provides comprehensive 
+                    guidance on API endpoints, parameters, and usage scenarios, ensuring a smooth onboarding experience for developers of all 
+                    skill levels. For more information, visit our <a href="./main.html?page=DocsPage&search=How to Use Our API">Docs</a> page 
+                    about it.
                     </p> 
                   </div> 
                 </div>
@@ -733,7 +744,111 @@ try@{
                 </div>
             </div>
         </div>
+        <div class="headerDivider">
+            <div class="divider-name">
+                <div class="divider-name-component" id="dividerEnd" onclick="dividerPageRout('dividerEnd','middleEnd');">Endpoints</div>
+                <div class="divider-name-component" id="dividerAbout" onclick="dividerPageRout('dividerAbout','middleAbout');">About</div>
+                <div class="divider-name-component" id="dividerTutorial" onclick="dividerPageRout('dividerTutorial','middleTutorial');">Tutorials</div>
+            </div>
+        </div>
+        <div class="middleBody">
+            <div class="middleBody-component"id="middleEnd">
+                <div class="littleAbout">
+                    <div class="littleAboutApi">Lorem ipsum dolor sit amet consectetur adipisicing elit.</div>
+                    <span class="moreAboutApi" onclick="dividerPageRout('dividerAbout','middleAbout');">Show more.</span>
+                </div>
+                <div class="api-version form-group">
+                    <select class="form-control" disabled="">
+                        <option>Version 4.0 (Recommended)</option>
+                        <option>Version 2.0</option>
+                        <option>Version 1.0</option>
+                    </select>
+                </div>
+                <div class="api-dualVision">
+                    <div class="api-dualVision-left">
+                        <div class="api-dualVision-left-head">
+                            <div>GET</div>
+                            <span class="btn btn-primary" onclick="window.open('./main.html?page=DocsPage&test=ok&search=Why Library File Inclusion is Required');"><i class="fa fa-code"></i> Libary Plugins</span>
+                        </div>
+                        <div class="api-dualVision-left-body">
+                            <div class="form-group">
+                                <label for="api-dualVision-info">Host Url</label>
+                                <input type="link" class="form-control" value="kidKrishkode.github.io/inphantApi.github.io"readonly="true"/>
+                            </div>
+                            <div class="form-group">
+                                <label for="api-dualVision-info">Request Url</label>
+                                <input type="link" class="form-control" value="https://{Host url}/APIs/{Api Identifier}.js?{Request body}"readonly="true"/>
+                            </div>
+                            <div class="api-dualVision-left-body-divider">Header Parameter</div>
+                            <div class="form-group">
+                                <label for="api-dualVision-info">API Identifier</label>
+                                <input type="link" class="form-control" value="LoremApi.js"readonly="true"/>
+                            </div>
+                            <div class="api-dualVision-left-body-divider">Request Body</div>
+                            <code>Required Parameters</code>
+                            <div class="form-group">
+                                <label for="api-dualVision-info">Operation</label>
+                                <input type="link" class="form-control" value="add/sub/multi/divid/pow"readonly="true"/>
+                            </div>
+                            <code>Optional Parameters</code>
+                            <div class="form-group">
+                                <label for="api-dualVision-info">Operand</label>
+                                <input type="link" class="form-control" value="infity to 0"readonly="true"/>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="api-dualVision-right">
+                        <div class="api-dualVision-right-head">
+                            <div class="api-dualVision-right-head-comonent" id="api-dualVision-head-code" onclick="dualvisionPageRout('api-dualVision-head-code','api-dualVision-body-code');">Code Snippets</div>
+                            <div class="api-dualVision-right-head-comonent" id="api-dualVision-head-example" onclick="dualvisionPageRout('api-dualVision-head-example','api-dualVision-body-example');">Example Responce</div>
+                        </div>
+                        <div class="api-dualVision-right-body"id="api-dualVision-body-code">
+                            <div class="form-group">
+                                <select class="form-control">
+                                    <option>Vanilla</option>
+                                    <option>Node</option>
+                                    <option>React</option>
+                                    <option>Android</option>
+                                </select>
+                            </div>
+                        </div>
+                        <div class="api-dualVision-right-body"id="api-dualVision-body-example">
+                            Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="middleBody-component"id="middleAbout">This is api about page</div>
+            <div class="middleBody-component"id="middleTutorial">This is yt video page</div>
+        </div>
+        <div class="shareApiFloat">
+            <div class="btn btn-primary" title="Share this page to your friends" onclick="shareActivate('OpenApiPage');"><i class="fa fa-share"></i></div>
+        </div>
     </section>
+    <section id="blbg"></section>
+    <div id="linkBox">
+        <div class="link-area card">
+            <div class="card-header">Inphant Api</div>
+            <div class="card-body">
+                <h5 class="card-title"><i class="fa fa-bookmark-o"></i> PARMA LINK for</h5>
+                <span id="api-link-name">Lorem ipsum dolor sit</span>
+                <div class="custom-file">
+                    <!-- <input type="link" class="custom-file-input" id="customFile" readonly="true"/> -->
+                    <label class="custom-file-label" for="customFile" id="customFile" onclick="Copy('customFile');">https://kidKrishkode.github.io/inphantApi.github.io/main.html?page=ApiPage&test=ok&pid=3</label>
+                </div>
+                <p class="card-text text-muted">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                <div class="flo">
+                    <i class="fa fa-whatsapp" title="Share the parma link into WhatsApp" onclick="shareOnWhatsApp();"></i>
+                    <i class="fa fa-facebook" title="Share the parma link into Facebook" onclick="shareOnFacebook();"></i>
+                    <i class="fa fa-instagram" title="Share the parma link into Instagram" onclick="shareOnInstagram();"></i>
+                    <i class="fa fa-linkedin-square" title="Share the parma link into LinkedIn" onclick="shareOnLinkedIn();"></i>
+                </div>
+            </div>
+            <div class="card-footer">
+                <div class="btn btn-danger" onclick="deactiveShare();">Close</div>
+            </div>
+        </div>
+    </div>
     <footer>
         <div class="footer">
             <h2>INPHANT API</h2>
