--- a/main.html
+++ b/main.html
@@ -90,53 +90,8 @@
             </form>
         </div>
     </div>
-    <section id="HomePage">
-        <h1>WELCOME TO INPHANT API</h1>
-        <h4>
-            <div id="h40"><span>.</span></div>
-            <span id="h41">Welcome to our Inphant Api's portal </span>
-            <span id="h42">kidKrishkode provides top level APIs </span>
-            <span id="h43">Access top-tier API services at no cost </span>
-            <span id="h44">Discover new APIs with just one click </span>
-            <span id="h45">Join us and witness the future firsthand </span>
-        </h4>
-        <p>We are offering you advanced level (Vanilla)<br> APIs with their documentation, explore popular<br> API ideas with us.</p>
-        <div class="welbtn">
-            <div title="Plug in most populare api at your project">
-                <button onclick="pageRout(1);"><span>Explore Now</span>Recommended For Most User</button>
-                <span class="support">Other Downloads | Free codes | Feedback</span>
-            </div>
-            <div title="Contact us for any requirments">
-                <button onclick="pageRout(4);"><span>Contact Us</span>Share your project ideas</button>
-                <span class="support">Help | Modification | Join us | Ratings</span>
-            </div>
-        </div>
-        <p>For information about modified releases, see the<br><a href="/">release schedule</a>.</p>
-    </section>
-    <section id="ApiPage">
-        <div class="searchBox">
-            <div class="searchBar">
-                <div class="searchSelect">
-                    <select id="searchSelectList" onchange="searchbySelect('searchSelectList','drop');"><option>All</option><option>Free Api</option><option>Premium Api</option><option>Data support Api</option><option>Fast Api</option><option>volunteer's Api</option><option>Others</option></select>
-                </div>
-                <div class="searchText">
-                    <input type="text" placeholder="Search Inphant APIs" id="searchData" onkeyup="search_product('searchData','drop');">
-                </div>
-                <div class="searchIcon">
-                    <i class="fa fa-search"></i>
-                </div>
-            </div>
-        </div>
-        <ol class="search-product-data" id="productList">
-            &times; No data found, internet slow;
-        </ol>
-        <div class="addApiFloat">
-            <div class="btn btn-primary" onclick="invalid();" title="Add Your APIs here"><i class="fa fa-plus"></i></div>
-        </div>
-        <div class="shareApiFloat">
-            <div class="btn btn-primary" title="Share this page to your friends" onclick="shareActivate('ApiPage');"><i class="fa fa-share"></i></div>
-        </div>
-    </section>
+    <section id="HomePage"></section>
+    <section id="ApiPage"></section>
     <section id="DocsPage">
         <div class="searchBox">
             <div class="searchBar">
@@ -539,178 +494,19 @@ try@{
                 </div>
             </li>
         </ol>
-    </section>
-    <section id="AboutPage">
-
-    </section>
-    <section id="HelpPage">
-        <div class="searchBox">
-            <h2>How can we help you?</h2>
-            <div class="searchBar">
-                <div class="searchText" title="Search APIs">
-                    <input type="text" placeholder="Search APIs" id="searchText" onkeyup="search('searchText');">
-                </div>
-                <div class="searchIcon">
-                    <i class="fa fa-search"></i>
-                </div>
-            </div>
-        </div>
-        <div class="help-component flo">
-            <div class="left-help-component">
-                <h2 id="help-head">Having any problems?</h2>
-                <div class="help-comment-box">
-                    <form class="query-form">
-                        <div class="form-group">
-                            <lable for="help-name">Name</lable>
-                            <input type="name" class="form-control" id="help-query-name" placeholder="Enter your name here" aria-describedby="nameHelp" required onkeyup="commentNameCheck('help-head','help-query-name');"/>
-                            <small id="nameHelp" class="form-text text-muted">The above field serves as a significant element on your profile identify.</small>
-                        </div>
-                        <div class="form-group">
-                            <lable for="help-comment">Comment <div><span id="comment-count">0</span>/1000</div></lable>
-                            <textarea class="form-control" id="help-query-comment" placeholder="Enter your comment here" aria-describedby="commentHelp" required onkeyup="commentMessageCheck('help-head','help-query-comment','comment-count');"></textarea>
-                            <small id="commentHelp" class="form-text text-muted">The above field serves as a message query from feedback.</small>
-                        </div>
-                        <div class="form-group">
-                            <div class="btn btn-primary" onclick="helpCommentSend('help-head','help-query-name','help-query-comment','comment-count','');"><i class="fa fa-message"></i>Re-direct to SMTP</div>
-                        </div>
-                    </form>
-                </div>
-            </div>
-            <div class="right-help-component">
-                <div class="flo">
-                    <div class="right-help-component-box flo" style="border: 2px solid #00ff09;" onclick="ApiPageWithSearch('Free');">
-                        <div class="right-help-component-box-icon" style="color: #00ff09;"><i class="fa fa-bank"></i></div>
-                        <div class="right-help-component-box-info">
-                            <h5 style="color: #00ff09;">Free api</h5>
-                            <p>At inphantApi, we provide free, accessible APIs in simple formats for developers from frontend side.</p>
-                        </div>
-                    </div>
-                    <div class="right-help-component-box flo" style="border: 2px solid blue;" onclick="invalid();">
-                        <div class="right-help-component-box-icon" style="color: blue;"><i class="fa fa-user-secret"></i></div>
-                        <div class="right-help-component-box-info">
-                            <h5 style="color: blue;">Accounts</h5>
-                            <p>At account, we prioritize user security. We swiftly address any potential vulnerabilites to safeguard user info.</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="flo">
-                    <div class="right-help-component-box flo" style="border: 2px solid aquamarine;" onclick="projectPulseRoute();">
-                        <div class="right-help-component-box-icon" style="color: aquamarine;"><i class="fa fa-trophy"></i></div>
-                        <div class="right-help-component-box-info">
-                            <h5 style="color: aquamarine;">ProjectPluse</h5>
-                            <p>Free, open source projects platform for school, college, research; integrates with Inphant API. Visit soon.</p>
-                        </div>
-                    </div>
-                    <div class="right-help-component-box flo" style="border: 2px solid orangered;" onclick="ApiPageWithSearch('Volunteer');">
-                        <div class="right-help-component-box-icon" style="color: orangered;"><i class="fa fa-group"></i></div>
-                        <div class="right-help-component-box-info">
-                            <h5 style="color: orangered;">Volunteer</h5>
-                            <p>Inphant Api always welcome volunteer contributions; Creat, Share , Use custom APIs effortlessly.</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="flo">
-                    <div class="right-help-component-box flo" style="border: 2px solid purple;" onclick="invalid();">
-                        <div class="right-help-component-box-icon" style="color: purple;"><i class="fa fa-credit-card"></i></div>
-                        <div class="right-help-component-box-info">
-                            <h5 style="color: purple;">Purchasing</h5>
-                            <p>Purchase premium subscription for unlimited queries per day; Gpay, Paytm, Online transactions supported.</p>
-                        </div>
-                    </div>
-                    <div class="right-help-component-box flo" style="border: 2px solid gray;" onclick="pageRout(2);">
-                        <div class="right-help-component-box-icon" style="color: gray;"><i class="fa fa-book"></i></div>
-                        <div class="right-help-component-box-info">
-                            <h5 style="color: gray;">User Guides</h5>
-                            <p>Access detailed user guid, comprehensive docs, intuitive interface, personal API guides, feedback system.</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="faq-help">
-            <h2>FAQs</h2>
-            <div class="layout">
-                <div class="accordion"> 
-                  <div class="accordion__question"> 
-                    <p>How to add libary plugin in my project?</p> 
-                  </div> 
-                  <div class="accordion__answer"> 
-                    <p>To facilitate the incorporation of our library files into your project, we have streamlined the process, ensuring 
-                    simplicity and ease of implementation. Adding the library file link or encoding it within your project structure is 
-                    as straightforward as inserting a JavaScript link, aligning with industry-standard practices for integrating API 
-                    plugins. Careful adherence to the prescribed steps, detailed below, is imperative to ensure the seamless functioning 
-                    of our APIs within your project environment. For more information, visit our 
-                    <a href="./main.html?page=DocsPage&search=Why Library File Inclusion is Required">Docs</a> page about it.
-                    </p> 
-                  </div> 
-                </div>
-                <div class="accordion"> 
-                  <div class="accordion__question"> 
-                    <p>How to add an Api in my web?</p> 
-                  </div> 
-                  <div class="accordion__answer"> 
-                    <p>Utilizing our API is a straightforward process designed to empower developers with seamless access to a diverse 
-                    range of functionalities. By following a few simple steps, developers can quickly integrate our APIs into their 
-                    projects and leverage the wealth of data and capabilities they offer. Our intuitive documentation provides comprehensive 
-                    guidance on API endpoints, parameters, and usage scenarios, ensuring a smooth onboarding experience for developers of all 
-                    skill levels. For more information, visit our <a href="./main.html?page=DocsPage&search=How to Use Our API">Docs</a> page 
-                    about it.
-                    </p> 
-                  </div> 
-                </div>
-                <div class="accordion"> 
-                    <div class="accordion__question"> 
-                      <p>How to add my Api here?</p> 
-                    </div> 
-                    <div class="accordion__answer"> 
-                      <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatum repellat aliquid 
-                      sequi libero hic enim modi, nostrum consequatur possimus maxime.
-                      </p> 
-                    </div> 
-                </div>
-                <div class="accordion"> 
-                    <div class="accordion__question"> 
-                      <p>Can i get earned by my Api?</p> 
-                    </div> 
-                    <div class="accordion__answer"> 
-                      <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatum repellat aliquid 
-                      sequi libero hic enim modi, nostrum consequatur possimus maxime.
-                      </p> 
-                    </div> 
-                </div>
-                <div class="accordion"> 
-                    <div class="accordion__question"> 
-                      <p>I don't like this Api utility</p> 
-                    </div> 
-                    <div class="accordion__answer"> 
-                      <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatum repellat aliquid 
-                      sequi libero hic enim modi, nostrum consequatur possimus maxime.
-                      </p> 
-                    </div> 
-                </div>
-                <div class="accordion"> 
-                    <div class="accordion__question"> 
-                      <p>Why api give limited queres per day, what can i do to fix it?</p> 
-                    </div> 
-                    <div class="accordion__answer"> 
-                      <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatum repellat aliquid 
-                      sequi libero hic enim modi, nostrum consequatur possimus maxime.
-                      </p> 
-                    </div> 
-                </div>
-                <div class="accordion"> 
-                    <div class="accordion__question"> 
-                      <p>Can i use this Api in commercial projects?</p> 
-                    </div> 
-                    <div class="accordion__answer"> 
-                      <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatum repellat aliquid 
-                      sequi libero hic enim modi, nostrum consequatur possimus maxime.
-                      </p> 
-                    </div> 
-                </div>
+        <div class="search-not-found" id="searchTextDOD">
+            <div class="error container">
+                <i class="fa fa-times-circle-o"></i>
+                <h4>Error 404!</h4>
+                <h3>Search data not founded in records</h3>
+                <p>Your request has been failed because your searching string will not found in the provided records, try other keys, or
+                    check the string is right spealings.
+                </p>
             </div>
         </div>
     </section>
+    <section id="AboutPage"></section>
+    <section id="HelpPage"></section>
     <section id="OpenApiPage">
         <div class="header">
             <div class="header-left">
@@ -959,13 +755,16 @@ try@{
                                 <div class="form-group">
                                     <lable for="viewer-message">Message</lable>
                                     <textarea class="form-control" id="viewer-message" row="8" aria-describedby="commentHelp" placeholder="Enter your message here"></textarea>
-                                    <small id="commentHelp" class="form-text text-muted">You can @mention other users in this message</small>
+                                    <small id="commentHelp" class="form-text text-muted">You can mention other APIs using there name or link in this message</small>
                                 </div>
                             </form>
-                            <button class="btn btn-primary" onclick="commentMe();" title="I agree all terms and conditions..">Re-direct to SMTP</button>
+                            <div class="btn btn-primary" onclick="commentMe();" title="I agree all terms and conditions..">Re-direct to SMTP</div>
                         </div>
                     </div>
-                    <div class="right-api-feedback"><img src="./img/Node.js_logo.svg.png"/></div>
+                    <div class="right-api-feedback" onclick="dividerPageRout('dividerTutorial','middleTutorial');">
+                        <h4>Visual Support</h4>
+                        <iframe src="https://www.youtube.com/embed/M63IdwIymiY?controls=0"alt="loading..."id="littleytvideo"></iframe>
+                    </div>
                 </div>
             </div>
             <div class="middleBody-component"id="middleAbout">
@@ -980,29 +779,6 @@ try@{
         </div>
     </section>
     <section id="blbg"></section>
-    <div id="linkBox">
-        <div class="link-area card">
-            <div class="card-header">Inphant Api</div>
-            <div class="card-body">
-                <h5 class="card-title"><i class="fa fa-bookmark-o"></i> PARMA LINK for</h5>
-                <span id="api-link-name">Lorem ipsum dolor sit</span>
-                <div class="custom-file">
-                    <!-- <input type="link" class="custom-file-input" id="customFile" readonly="true"/> -->
-                    <label class="custom-file-label" for="customFile" id="customFile" onclick="Copy('customFile');">https://kidKrishkode.github.io/inphantApi.github.io/main.html?page=ApiPage&test=ok&pid=3</label>
-                </div>
-                <p class="card-text text-muted">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                <div class="flo">
-                    <i class="fa fa-whatsapp" title="Share the parma link into WhatsApp" onclick="shareOnWhatsApp();"></i>
-                    <i class="fa fa-facebook" title="Share the parma link into Facebook" onclick="shareOnFacebook();"></i>
-                    <i class="fa fa-instagram" title="Share the parma link into Instagram" onclick="shareOnInstagram();"></i>
-                    <i class="fa fa-linkedin-square" title="Share the parma link into LinkedIn" onclick="shareOnLinkedIn();"></i>
-                </div>
-            </div>
-            <div class="card-footer">
-                <div class="btn btn-danger" onclick="deactiveShare();">Close</div>
-            </div>
-        </div>
-    </div>
     <footer>
         <div class="footer">
             <h2>INPHANT API</h2>
@@ -1057,6 +833,10 @@ try@{
 <script src="./Database/styledata.js"></script>
 <script src="./Database/productData.js"></script>
 <script src="./Database/asset.js"></script>
+<script src="./Database/HomePage.js"></script>
+<script src="./Database/ApiPage.js"></script>
+<script src="./Database/HelpPage.js"></script>
+<script src="./Database/LinkBox.js"></script>
 <script src="./Components/default.js"></script>
 <script src="./Components/compiler.js"></script>
 <script src="./Components/hex.js"></script>
